--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preload" href="./src/assets/comp.webp" as="image" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfoliov3</title>
+    <title>Obonolo Modise | Fullstack Web and Software developer</title>
   </head>
   <body>
     <div id="root">
